Fixed with scrollbar on main page

--- a/code/src/components/Details.css
+++ b/code/src/components/Details.css
@@ -9,7 +9,7 @@
     grid-template-columns: repeat(1, 1fr);
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 95vh;
+    height: 100vh;
     width: 100vw;
   }
   
@@ -67,7 +67,10 @@
   .detailsPage .rating {
     font-size: 17px;
     font-weight: bold;
-    color: red;
+    color: white;
+    background-color: rgb(243,206,19);
+    border-radius: 3px;
+    padding: 2px 4px 2px 4px;
     margin-left: 10px;
   }
 
