--- a/code/src/components/Navbar.css
+++ b/code/src/components/Navbar.css
@@ -1,9 +1,14 @@
 .navbar{
-    height: 6vh;
+  background-color: #000;
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  z-index: 10;
+  align-items: center;
 }
 
   h1.header-welcome{
-      margin: 10px 0 10px 0;
+    margin: 12px 0 8px 0;
     text-align: center;
     font-family: 'Nova Square', cursive;
     color: rgb(13, 144, 153);
