--- a/code/src/components/NotFound.css
+++ b/code/src/components/NotFound.css
@@ -14,6 +14,7 @@ h1.\34 04-text {
     background-color: transparent;
     font-size: 20px;
     cursor: pointer;
+    padding-top: 25px;
 }
 
 
